// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-footer-link-group should render small: footer-link-group-small 1`] = `
<ic-footer breakpoint="extra large" class="footer footer-light footer-small footer-ungrouped light">
  <mock:shadow-root>
    <footer>
      <div class="footer-description">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-description-inner">
            <ic-typography variant="body">
              <slot name="description"></slot>
            </ic-typography>
          </div>
        </ic-section-container>
      </div>
      <div class="footer-links">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-links-inner">
            <slot name="link"></slot>
          </div>
        </ic-section-container>
      </div>
      <div class="footer-compliance">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-compliance-inner">
            <div class="footer-logo">
              <slot name="logo"></slot>
            </div>
            <div class="footer-caption">
              <ic-typography variant="body">
                <slot name="caption"></slot>
              </ic-typography>
            </div>
            <div class="footer-copyright">
              <ic-typography variant="label-uppercase">
                © Crown Copyright
              </ic-typography>
            </div>
          </div>
        </ic-section-container>
      </div>
    </footer>
  </mock:shadow-root>
  <ic-footer-link-group aria-haspopup="true" class="footer-link-group footer-link-group-light footer-link-group-small" group-title="Link group" small="true" tabindex="1">
    <mock:shadow-root>
      <ic-section-container fullheight="">
        <div class="footer-link-group-header">
          <div class="footer-link-group-title">
            <ic-typography variant="label">
              Link group
            </ic-typography>
          </div>
          <svg aria-hidden="true" class="footer-link-group-toggle" height="1em" preserveAspectRatio="xMidYMid meet" role="img" viewBox="0 0 1200 1200" width="1em" xmlns="http://www.w3.org/2000/svg">
            <g transform="translate(0 1200) scale(1 -1)">
              <path d="M600.002 210.605L421.285 389.336L0 810.559l178.721 178.836l421.281-421.341l421.281 421.341L1200 810.559L778.733 389.336L600.002 210.605z" fill="currentColor"></path>
            </g>
          </svg>
        </div>
      </ic-section-container>
    </mock:shadow-root>
    <ic-footer-link class="footer-link footer-link-light footer-link-ungrouped-small" href="/">
      <mock:shadow-root>
        <a href="/">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Link
    </ic-footer-link>
  </ic-footer-link-group>
</ic-footer>
`;

exports[`ic-footer-link-group should render within footer: footer-link-group-in-footer 1`] = `
<ic-footer class="footer footer-light footer-sparse footer-ungrouped light">
  <mock:shadow-root>
    <footer>
      <div class="footer-description">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-description-inner">
            <ic-typography variant="body">
              <slot name="description"></slot>
            </ic-typography>
          </div>
        </ic-section-container>
      </div>
      <div class="footer-links">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-links-inner">
            <slot name="link"></slot>
          </div>
        </ic-section-container>
      </div>
      <div class="footer-compliance">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-compliance-inner">
            <div class="footer-logo">
              <slot name="logo"></slot>
            </div>
            <div class="footer-caption">
              <ic-typography variant="body">
                <slot name="caption"></slot>
              </ic-typography>
            </div>
            <div class="footer-copyright">
              <ic-typography variant="label-uppercase">
                © Crown Copyright
              </ic-typography>
            </div>
          </div>
        </ic-section-container>
      </div>
    </footer>
  </mock:shadow-root>
  <ic-footer-link-group class="footer-link-group footer-link-group-light footer-link-group-sparse" group-title="Link group">
    <mock:shadow-root>
      <div class="footer-link-group-title">
        <ic-typography variant="subtitle-small">
          Link group
        </ic-typography>
      </div>
      <div class="footer-link-group-links">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <ic-footer-link class="footer-link footer-link-light footer-link-ungrouped-sparse" href="/">
      <mock:shadow-root>
        <a href="/">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Link
    </ic-footer-link>
  </ic-footer-link-group>
  <ic-footer class="footer footer-light footer-sparse footer-ungrouped light">
    <mock:shadow-root>
      <footer>
        <div class="footer-description">
          <ic-section-container aligned="left" fullheight="">
            <div class="footer-description-inner">
              <ic-typography variant="body">
                <slot name="description"></slot>
              </ic-typography>
            </div>
          </ic-section-container>
        </div>
        <div class="footer-links">
          <ic-section-container aligned="left" fullheight="">
            <div class="footer-links-inner">
              <slot name="link"></slot>
            </div>
          </ic-section-container>
        </div>
        <div class="footer-compliance">
          <ic-section-container aligned="left" fullheight="">
            <div class="footer-compliance-inner">
              <div class="footer-logo">
                <slot name="logo"></slot>
              </div>
              <div class="footer-caption">
                <ic-typography variant="body">
                  <slot name="caption"></slot>
                </ic-typography>
              </div>
              <div class="footer-copyright">
                <ic-typography variant="label-uppercase">
                  © Crown Copyright
                </ic-typography>
              </div>
            </div>
          </ic-section-container>
        </div>
      </footer>
    </mock:shadow-root>
  </ic-footer>
</ic-footer>
`;
